<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.AddComputer"
        tools:showIn="@layout/dd.app.computall.main">
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/makeText1"
            android:hint="@string/Make"
            android:singleLine="true"

            android:textColor="@color/tool"
            android:textColorHint="@color/tool"


            android:layout_below="@+id/AddPhone"
            android:layout_alignStart="@+id/addButton" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Model"
            android:singleLine="true"

            android:id="@+id/modelText1"
            android:textColor="@color/tool"
            android:textColorHint="@color/tool"


            android:layout_below="@+id/makeText1"
            android:layout_alignStart="@+id/makeText1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Add Computer to Database"
            android:id="@+id/AddPhone"
            android:textColor="@color/tool"
            android:textStyle="bold"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coolingSystem"
            android:background="@null"
            style="SpinnerDropDownItemStyle"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/towerType"
            android:layout_alignStart="@+id/towerType" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/towerType"
            android:hint="Tower Type"
            android:background="@null"
            android:textColorHint="@color/tool"
            style="SpinnerDropDownItemStyle"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/priceText"
            android:layout_alignStart="@+id/priceText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceText"
            android:hint="Price in €"
            android:singleLine="true"

            android:inputType="number|numberDecimal"
            android:textColor="@color/tool"
            android:textColorHint="@color/tool"


            android:layout_below="@+id/modelText1"
            android:layout_alignStart="@+id/modelText1" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/screenText2"
            android:background="@null"

            android:spinnerMode="dropdown"
            android:layout_below="@+id/coolingSystem"
            android:layout_alignStart="@+id/coolingSystem" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ramText"
            android:background="@null"

            android:spinnerMode="dropdown"
            android:layout_below="@+id/screenText2"
            android:layout_alignStart="@+id/screenText2" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cpuText1"
            android:spinnerMode="dropdown"
            android:background="@null"

            android:layout_below="@+id/ramText"
            android:layout_alignStart="@+id/ramText" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/storageText1"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/cpuText1"
            android:layout_alignStart="@+id/cpuText1"
            android:background="@null"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addButton"
            android:id="@+id/addButton"
            android:onClick="addButtonPressed"
            android:textColor="@color/tool"


            android:layout_below="@+id/storageText1"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</ScrollView>